--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ replay_pid6080.log
 lib/__pycache__/life.cpython-39.pyc
 lib/__pycache__/math2.cpython-39.pyc
 lib/__pycache__/wall.cpython-39.pyc
+__pycache__/main.cpython-38.pyc
