--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ lib/__pycache__/net.cpython-39.pyc
 lib/__pycache__/sensor.cpython-39.pyc
 __pycache__/main.cpython-39.pyc
 lib/__pycache__/__init__.cpython-39.pyc
+lib/__pycache__/test.cpython-39.pyc
