--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ lib/__pycache__/math2.cpython-38.pyc
 lib/__pycache__/net.cpython-38.pyc
 lib/__pycache__/sensor.cpython-38.pyc
 lib/__pycache__/wall.cpython-38.pyc
+lib/__pycache__/manager.cpython-38.pyc
