--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "python.pythonPath": "env\\Scripts\\python.exe"
+    "python.pythonPath": "env\\Scripts\\python.exe",
+    "cSpell.ignoreWords": [
+        "aacircle",
+        "aaline",
+        "dists"
+    ]
 }
