--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ lib/__pycache__/collisions.cpython-38.pyc
 lib/__pycache__/gui.cpython-38.pyc
 lib/__pycache__/collisions.cpython-39.pyc
 env.rar
+lib/__pycache__/autoterrain.cpython-39.pyc
