--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,10 @@
         "aaline",
         "dists",
         "doublebuf",
-        "hwsurface"
+        "fira",
+        "font",
+        "hwsurface",
+        "subtitl",
+        "titl"
     ]
 }
