--- a/saves/projects.json
+++ b/saves/projects.json
@@ -1,1 +1,1 @@
-{"projects": ["NewWorld", "World01", "World", "W", "Wa", "World03", "World04", "World06", "World08", "World10", "World11", "World12", "World13", "World14", "World15", "World17", "NewWorld03"]}
+{"projects": ["Sim"]}
