--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,13 @@ main.py
 lib/__pycache__/creature.cpython-39.pyc
 lib/__pycache__/object.cpython-39.pyc
 lib/__pycache__/plant.cpython-39.pyc
+saves/Sim02/836.7.json
+saves/Sim02/saves.json
+saves/SimWorld/5.8.json
+saves/SimWorld/36.2.json
+saves/SimWorld/109.2.json
+saves/SimWorld/246.3.json
+saves/SimWorld/292.1.json
+saves/SimWorld/saves.json
+lib/__pycache__/rock.cpython-39.pyc
+test0.py
