--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,11 @@ saves/SimWorld/292.1.json
 saves/SimWorld/saves.json
 lib/__pycache__/rock.cpython-39.pyc
 test0.py
+saves/Sim02/857.8.json
+saves/Sim02/938.7.json
+saves/Sim02/1046.9.json
+saves/Sim02/1088.1.json
+saves/Sim02/1942.9.json
+saves/Sim02/1993.7.json
+saves/Sim02/2008.3.json
+saves/Sim02/2427.4.json
