--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,10 @@
         "fira",
         "font",
         "hwsurface",
+        "meat",
+        "obstacle",
         "subtitl",
-        "titl"
+        "titl",
+        "vege"
     ]
 }
