--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,10 @@ saves/Sim02/1942.9.json
 saves/Sim02/1993.7.json
 saves/Sim02/2008.3.json
 saves/Sim02/2427.4.json
+lib/__pycache__/meat.cpython-39.pyc
+saves/Sim04/553.3.json
+saves/Sim04/saves.json
+saves/Simulation03/1.1.json
+saves/Simulation03/saves.json
+saves/SimWorld05/32.0.json
+saves/SimWorld05/saves.json
