--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,28 @@ main.py
 lib/__pycache__/creature.cpython-39.pyc
 lib/__pycache__/object.cpython-39.pyc
 lib/__pycache__/plant.cpython-39.pyc
+lib/__pycache__/meat.cpython-39.pyc
+lib/__pycache__/rock.cpython-39.pyc
+saves/Sim02/836.7.json
+saves/Sim02/857.8.json
+saves/Sim02/938.7.json
+saves/Sim02/1046.9.json
+saves/Sim02/1088.1.json
+saves/Sim02/1942.9.json
+saves/Sim02/1993.7.json
+saves/Sim02/2008.3.json
+saves/Sim02/2427.4.json
+saves/Sim02/saves.json
+saves/Sim04/553.3.json
+saves/Sim04/saves.json
+saves/Simulation03/1.1.json
+saves/Simulation03/saves.json
+saves/SimWorld/5.8.json
+saves/SimWorld/36.2.json
+saves/SimWorld/109.2.json
+saves/SimWorld/246.3.json
+saves/SimWorld/292.1.json
+saves/SimWorld/saves.json
+saves/SimWorld05/32.0.json
+saves/SimWorld05/saves.json
+test0.py
