--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "cSpell.ignoreWords": [
         "aacircle",
         "aaline",
+        "cpos",
         "dists",
         "doublebuf",
         "fira",
