--- a/saves/projects.json
+++ b/saves/projects.json
@@ -1,1 +1,1 @@
-{"projects": ["sim01", "SimWorld", "Sim00", "Sim01", "a", "A", "Sim02", "Nowa", "NewSim02", "Simulation03", "Sim04", "SimWorld04", "SimWorld05"]}
+{"projects": ["Planet01"]}
