--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ saves/World03/15.1.json
 saves/World03/saves.json
 saves/Planet01/0.8.json
 saves/Planet01/saves.json
+lib/__pycache__/names.cpython-39.pyc
