--- a/saves/projects.json
+++ b/saves/projects.json
@@ -1,1 +1,1 @@
-{"projects": ["NewWorld01", "World03", "Simulatiom01", "World02", "Universe01", "Universum", "UniversumII", "Homeland"]}
+{"projects": []}
