--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,4 @@ saves/World03/saves.json
 saves/Planet01/0.8.json
 saves/Planet01/saves.json
 lib/__pycache__/names.cpython-39.pyc
+lib/__pycache__/species.cpython-39.pyc
