--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,6 @@ saves/Planet01/0.8.json
 saves/Planet01/saves.json
 lib/__pycache__/names.cpython-39.pyc
 lib/__pycache__/species.cpython-39.pyc
+lib/__pycache__/species.cpython-39.pyc
+lib/__pycache__/species.cpython-39.pyc
+lib/__pycache__/species.cpython-39.pyc
