--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,12 @@ lib/__pycache__/species.cpython-39.pyc
 lib/__pycache__/species.cpython-39.pyc
 lib/__pycache__/species.cpython-39.pyc
 lib/__pycache__/species.cpython-39.pyc
+log.txt
+saves/World01/142.7.json
+saves/World01/276.2.json
+saves/World01/813.3.json
+saves/World01/1264.4.json
+saves/World01/2382.0.json
+saves/World01/5106.0.json
+saves/World01/saves.json
+log.txt
