--- a/config.json
+++ b/config.json
@@ -1,36 +1,37 @@
 {
-  "WORLD": [1400, 700],
-  "SCREEN": [1400, 700],
+  "WORLD": [1900, 1000],
+  "SCREEN": [1900, 1000],
   "FONT_SIZE": 14,
   "PLANT_MAX_SIZE": 10,
   "PLANT_GROWTH": 0.1,
-  "PLANT_INIT_NUM": 30,
-  "PLANT_LIFE": 450,
-  "PLANT_MULTIPLY": 0.005,
-  "CREATURE_MULTIPLY": 0.0005,
+  "PLANT_INIT_NUM": 40,
+  "PLANT_LIFE": 500,
+  "PLANT_MULTIPLY": 0.01,
+  "CREATURE_MULTIPLY": 0.0001,
   "CREATURE_MIN_NUM": 10,
   "EAT": 200,
-  "CREATURE_INIT_NUM": 25,
-  "BASE_ENERGY": 0.02,
+  "CREATURE_INIT_NUM": 40,
+  "BASE_ENERGY": 0.04,
   "MOVE_ENERGY": 0.0001,
-  "REP_TIME": 60,
-  "REP_ENERGY": 0.25,
-  "SPEED": 1000,
+  "REP_TIME": 100,
+  "REP_ENERGY": 0.15,
+  "SPEED": 750,
   "TURN": 0.5,
   "SENSOR_SPEED": 1,
-  "CREATURE_MIN_SIZE": 3,
+  "CREATURE_MIN_SIZE": 4,
   "CREATURE_MAX_SIZE": 10,
   "HIT": 400,
   "MEM_TIME": 0.3,
   "SENSOR_MAX_ANGLE": 1.0471975511965976,
-  "ROCK_NUM": 8,
+  "ROCK_NUM": 11,
   "RANK_SIZE": 20,
   "MEAT_TIME": 40,
-  "VISUAL_RANGE": 180,
+  "VISUAL_RANGE": 200,
   "SIZE2ENG": 80,
   "SIZE_COST": 10,
   "CHILDS_NUM": 1,
   "VEGE2ENG": 3,
   "MEAT2ENG": 40,
+  "HIT2FIT": 0.3,
   "DIFF": 0.3
 }
