--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,7 @@ lib/__pycache__/species.cpython-39.pyc
 lib/__pycache__/species.cpython-39.pyc
 lib/__pycache__/species.cpython-39.pyc
 lib/__pycache__/species.cpython-39.pyc
+lib/__pycache__/species.cpython-39.pyc
+lib/__pycache__/utils.cpython-39.pyc
+lib/__pycache__/species.cpython-39.pyc
+lib/__pycache__/species.cpython-39.pyc
