--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,4 @@ lib/__pycache__/species.cpython-39.pyc
 lib/__pycache__/utils.cpython-39.pyc
 lib/__pycache__/species.cpython-39.pyc
 lib/__pycache__/species.cpython-39.pyc
+output/evo.exe
