--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,9 @@ lib/__pycache__/utils.cpython-39.pyc
 lib/__pycache__/species.cpython-39.pyc
 lib/__pycache__/species.cpython-39.pyc
 output/evo.exe
+config.json
+saves/NewSim/1352.6.json
+saves/NewSim/saves.json
+saves/NewLand2/6437.8.json
+saves/NewLand2/saves.json
+log.txt
