--- a/config.json
+++ b/config.json
@@ -3,18 +3,18 @@
   "SCREEN": [1900, 1000],
   "FONT_SIZE": 14,
   "PLANT_MAX_SIZE": 10,
-  "PLANT_GROWTH": 0.3,
+  "PLANT_GROWTH": 0.4,
   "PLANT_INIT_NUM": 40,
   "PLANT_LIFE": 500,
-  "PLANT_MULTIPLY": 0.04,
+  "PLANT_MULTIPLY": 0.05,
   "CREATURE_MULTIPLY": 0.0001,
-  "CREATURE_MIN_NUM": 24,
+  "CREATURE_MIN_NUM": 12,
   "EAT": 200,
   "CREATURE_INIT_NUM": 40,
   "BASE_ENERGY": 0.04,
   "MOVE_ENERGY": 0.0001,
   "REP_TIME": 100,
-  "REP_ENERGY": 0.15,
+  "REP_ENERGY": 0.3,
   "SPEED": 500,
   "TURN": 0.5,
   "SENSOR_SPEED": 1,
@@ -31,7 +31,12 @@
   "SIZE_COST": 15,
   "CHILDS_NUM": 1,
   "VEGE2ENG": 5,
-  "MEAT2ENG": 25,
+  "MEAT2ENG": 40,
   "HIT2FIT": 0.05,
-  "DIFF": 0.3
+  "MEAT2FIT": 0.05,
+  "VEGE2FIT": 0.05,
+  "DIFF": 0.3,
+  "AUTO_SAVE_TIME": 500,
+  "ATK_ENG": 0.01,
+  "EAT_ENG": 0.01
 }
