--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,87 @@ saves/NewLand2/saves.json
 log.txt
 log.txt
 log.txt
+saves/GyeyLand/10.0.json
+saves/GyeyLand/20.0.json
+saves/GyeyLand/30.0.json
+saves/GyeyLand/40.0.json
+saves/GyeyLand/50.0.json
+saves/GyeyLand/60.0.json
+saves/GyeyLand/70.0.json
+saves/GyeyLand/80.0.json
+saves/GyeyLand/90.0.json
+saves/GyeyLand/100.0.json
+saves/GyeyLand/110.0.json
+saves/GyeyLand/120.0.json
+saves/GyeyLand/saves.json
+saves/Time/10.0.json
+saves/Time/20.0.json
+saves/Time/30.0.json
+saves/Time/40.0.json
+saves/Time/50.0.json
+saves/Time/60.0.json
+saves/Time/70.0.json
+saves/Time/80.0.json
+saves/Time/90.0.json
+saves/Time/100.0.json
+saves/Time/110.0.json
+saves/Time/120.0.json
+saves/Time/130.0.json
+saves/Time/140.0.json
+saves/Time/150.0.json
+saves/Time/160.0.json
+saves/Time/170.0.json
+saves/Time/180.0.json
+saves/Time/190.0.json
+saves/Time/200.0.json
+saves/Time/210.0.json
+saves/Time/220.0.json
+saves/Time/230.0.json
+saves/Time/240.0.json
+saves/Time/250.0.json
+saves/Time/260.0.json
+saves/Time/270.0.json
+saves/Time/280.0.json
+saves/Time/290.0.json
+saves/Time/300.0.json
+saves/Time/310.0.json
+saves/Time/320.0.json
+saves/Time/330.0.json
+saves/Time/340.0.json
+saves/Time/350.0.json
+saves/Time/360.0.json
+saves/Time/370.0.json
+saves/Time/380.0.json
+saves/Time/390.0.json
+saves/Time/400.0.json
+saves/Time/410.0.json
+saves/Time/420.0.json
+saves/Time/430.0.json
+saves/Time/440.0.json
+saves/Time/450.0.json
+saves/Time/460.0.json
+saves/Time/470.0.json
+saves/Time/480.0.json
+saves/Time/490.0.json
+saves/Time/500.0.json
+saves/Time/510.0.json
+saves/Time/520.0.json
+saves/Time/530.0.json
+saves/Time/540.0.json
+saves/Time/550.0.json
+saves/Time/560.0.json
+saves/Time/570.0.json
+saves/Time/580.0.json
+saves/Time/590.0.json
+saves/Time/600.0.json
+saves/Time/610.0.json
+saves/Time/620.0.json
+saves/Time/630.0.json
+saves/Time/640.0.json
+saves/Time/650.0.json
+saves/Time/660.0.json
+saves/Time/670.0.json
+saves/Time/676.8.json
+saves/Time/saves.json
+saves/TimeUniverse/59.5.json
+saves/TimeUniverse/saves.json
