--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,49 @@ saves/Time/676.8.json
 saves/Time/saves.json
 saves/TimeUniverse/59.5.json
 saves/TimeUniverse/saves.json
+output/saves/FractureWorld/10.0.json
+output/saves/FractureWorld/60.0.json
+output/saves/FractureWorld/110.0.json
+output/saves/FractureWorld/160.0.json
+output/saves/FractureWorld/190.0.json
+output/saves/FractureWorld/saves.json
+output/saves/World/6.7.json
+output/saves/World/saves.json
+output1/evo.exe
+saves/New/10.0.json
+saves/New/20.0.json
+saves/New/30.0.json
+saves/New/40.0.json
+saves/New/45.6.json
+saves/New/50.0.json
+saves/New/60.0.json
+saves/New/70.0.json
+saves/New/86.6.json
+saves/New/97.0.json
+saves/New/197.0.json
+saves/New/saves.json
+lib/__pycache__/species.cpython-39.pyc
+output/planet32.png
+output/res/map.png
+output/res/map2.png
+output/res/v0.1.tar
+output/res/fonts/fira.ttf
+output/res/icons/planet01.ico
+output/res/icons/planet03.ico
+output/res/icons/planet04.ico
+output/res/icons/planet05-128.ico
+output/res/icons/planet05.ico
+output/res/images/map.bmp
+output/res/images/map.png
+output/res/images/planet01.png
+output/res/images/planet03.png
+output/res/images/planet04.png
+output/res/images/planet05.png
+output/res/images/splash.jpg
+output/res/images/water.png
+output/res/images/water2.png
+output/res/images/water3.png
+output/res/themes/blue.json
+output/res/themes/green.json
+output/res/themes/window.json
+output/saves/projects.json
