--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
   "PLANT_LIFE": 500,
   "PLANT_MULTIPLY": 0.02,
   "CREATURE_MULTIPLY": 0.0005,
-  "CREATURE_MIN_NUM": 12,
+  "CREATURE_MIN_NUM": 16,
   "EAT": 200,
   "CREATURE_INIT_NUM": 40,
   "BASE_ENERGY": 0.05,
@@ -18,25 +18,27 @@
   "SPEED": 500,
   "TURN": 0.5,
   "SENSOR_SPEED": 1,
-  "CREATURE_MIN_SIZE": 4,
-  "CREATURE_MAX_SIZE": 10,
-  "HIT": 40,
+  "CREATURE_MIN_SIZE": 3,
+  "CREATURE_MAX_SIZE": 12,
+  "HIT": 50,
   "MEM_TIME": 0.3,
   "SENSOR_MAX_ANGLE": 1.0471975511965976,
   "ROCK_NUM": 8,
   "RANK_SIZE": 10,
-  "MEAT_TIME": 40,
-  "VISUAL_RANGE": 220,
+  "MEAT_TIME": 45,
+  "VISUAL_RANGE": 250,
   "SIZE2ENG": 100,
   "SIZE_COST": 15,
   "CHILDS_NUM": 1,
   "VEGE2ENG": 3.5,
-  "MEAT2ENG": 15,
+  "MEAT2ENG": 4.5,
   "HIT2FIT": 0.03,
-  "MEAT2FIT": 0.03,
-  "VEGE2FIT": 0.03,
+  "MEAT2FIT": 0.04,
+  "VEGE2FIT": 0.01,
   "DIFF": 0.3,
-  "AUTO_SAVE_TIME": 100,
+  "AUTO_SAVE_TIME": 1000,
   "ATK_ENG": 0.01,
-  "EAT_ENG": 0.01
+  "EAT_ENG": 0.01,
+  "LINKS_RATE": 0.1,
+  "MUTATIONS": 1
 }
