--- a/.gitignore
+++ b/.gitignore
@@ -224,3 +224,5 @@ output/res/themes/blue.json
 output/res/themes/green.json
 output/res/themes/window.json
 output/saves/projects.json
+log.txt
+log.txt
