--- a/saves/projects.json
+++ b/saves/projects.json
@@ -1,1 +1,1 @@
-{"projects": ["TimeUniverse", "Time", "GyeyLand", "New", "C"]}
+{"projects": ["TimeUniverse", "Time", "GyeyLand", "New", "C", "S", "N"]}
