--- a/config.json
+++ b/config.json
@@ -6,43 +6,44 @@
   "PLANT_GROWTH": 5,
   "PLANT_INIT_NUM": 40,
   "PLANT_LIFE": 500,
-  "PLANT_MULTIPLY": 0.03,
+  "PLANT_MULTIPLY": 0.02,
   "CREATURE_MULTIPLY": 0.0001,
-  "CREATURE_MIN_NUM": 18,
-  "EAT": 40,
+  "CREATURE_MIN_NUM": 24,
+  "EAT": 25,
   "CREATURE_INIT_NUM": 40,
-  "BASE_ENERGY": 0.045,
-  "MOVE_ENERGY": 0.000018,
+  "BASE_ENERGY": 0.019,
+  "MOVE_ENERGY": 0.000008,
   "REP_TIME": 100,
   "REP_ENERGY": 0.4,
-  "SPEED": 75,
+  "SPEED": 60,
   "TURN": 0.7,
-  "SENSOR_SPEED": 0.7,
+  "SENSOR_SPEED": 0.4,
   "CREATURE_MIN_SIZE": 3,
   "CREATURE_MAX_SIZE": 10,
-  "HIT": 250,
+  "HIT": 100,
   "MEM_TIME": 0.3,
   "SENSOR_MAX_ANGLE": 1.0471975511965976,
   "ROCK_NUM": 8,
   "RANK_SIZE": 10,
-  "MEAT_TIME": 100,
+  "MEAT_TIME": 75,
   "VISUAL_RANGE": 250,
   "SIZE2ENG": 80,
-  "SIZE_COST": 45,
+  "SIZE_COST": 75,
   "CHILDS_NUM": 1,
-  "VEGE2ENG": 2,
-  "MEAT2ENG": 7,
+  "VEGE2ENG": 0.75,
+  "MEAT2ENG": 0.75,
   "HIT2FIT": 0.5,
-  "MEAT2FIT": 0.2,
+  "MEAT2FIT": 0.15,
   "VEGE2FIT": 0.05,
   "DIFF": 0.3,
-  "AUTO_SAVE_TIME": 250,
+  "AUTO_SAVE_TIME": 1000,
   "ATK_ENG": 0.01,
   "EAT_ENG": 0.01,
   "LINKS_RATE": 0.05,
-  "MUTATIONS": 0.5,
+  "MUTATIONS": 0.7,
   "TIME": 1,
-  "BORN2FIT": 75,
+  "BORN2FIT": 125,
   "RUN_COST": 6,
-  "RUN_TIME": 3
+  "RUN_TIME": 3,
+  "DIET_MOD": 0.04
 }
