--- a/config.json
+++ b/config.json
@@ -2,33 +2,33 @@
   "WORLD": [3800, 2000],
   "SCREEN": [1900, 1000],
   "FONT_SIZE": 14,
-  "PLANT_MAX_SIZE": 10,
+  "PLANT_MAX_SIZE": 9,
   "PLANT_GROWTH": 5,
-  "PLANT_INIT_NUM": 40,
+  "PLANT_INIT_NUM": 240,
   "PLANT_LIFE": 500,
   "PLANT_MULTIPLY": 0.02,
   "CREATURE_MULTIPLY": 0.0001,
-  "CREATURE_MIN_NUM": 2,
+  "CREATURE_MIN_NUM": 24,
   "EAT": 25,
-  "CREATURE_INIT_NUM": 20,
+  "CREATURE_INIT_NUM": 140,
   "BASE_ENERGY": 0.019,
   "MOVE_ENERGY": 0.000008,
   "REP_TIME": 100,
   "REP_ENERGY": 0.4,
   "SPEED": 60,
-  "TURN": 0.7,
+  "TURN": 0.5,
   "SENSOR_SPEED": 0.4,
   "CREATURE_MIN_SIZE": 3,
   "CREATURE_MAX_SIZE": 10,
-  "HIT": 100,
+  "HIT": 200,
   "MEM_TIME": 0.3,
   "SENSOR_MAX_ANGLE": 1.0471975511965976,
-  "ROCK_NUM": 8,
+  "ROCK_NUM": 24,
   "RANK_SIZE": 10,
   "MEAT_TIME": 75,
   "VISUAL_RANGE": 250,
-  "SIZE2ENG": 80,
-  "SIZE_COST": 75,
+  "SIZE2ENG": 200,
+  "SIZE_COST": 125,
   "CHILDS_NUM": 1,
   "VEGE2ENG": 0.75,
   "MEAT2ENG": 0.75,
@@ -45,5 +45,6 @@
   "BORN2FIT": 125,
   "RUN_COST": 6,
   "RUN_TIME": 3,
-  "DIET_MOD": 0.04
+  "DIET_MOD": 0.04,
+  "SENSOR_RANGE": 350
 }
