--- a/config.json
+++ b/config.json
@@ -1,21 +1,21 @@
 {
-  "WORLD": [3800, 2000],
+  "WORLD": [1890, 990],
   "SCREEN": [1900, 1000],
   "FONT_SIZE": 14,
   "PLANT_MAX_SIZE": 9,
-  "PLANT_GROWTH": 5,
-  "PLANT_INIT_NUM": 240,
+  "PLANT_GROWTH": 3.5,
+  "PLANT_INIT_NUM": 60,
   "PLANT_LIFE": 500,
-  "PLANT_MULTIPLY": 0.02,
+  "PLANT_MULTIPLY": 0.015,
   "CREATURE_MULTIPLY": 0.0001,
-  "CREATURE_MIN_NUM": 20,
-  "EAT": 25,
-  "CREATURE_INIT_NUM": 120,
-  "BASE_ENERGY": 0.008,
-  "MOVE_ENERGY": 0.000004,
+  "CREATURE_MIN_NUM": 25,
+  "EAT": 20,
+  "CREATURE_INIT_NUM": 60,
+  "BASE_ENERGY": 0.01,
+  "MOVE_ENERGY": 0.000005,
   "REP_TIME": 100,
   "REP_ENERGY": 0.3,
-  "SPEED": 40,
+  "SPEED": 5,
   "TURN": 0.45,
   "SENSOR_SPEED": 0.3,
   "CREATURE_MIN_SIZE": 3,
@@ -23,7 +23,7 @@
   "HIT": 200,
   "MEM_TIME": 0.3,
   "SENSOR_MAX_ANGLE": 1.0471975511965976,
-  "ROCK_NUM": 32,
+  "ROCK_NUM": 10,
   "RANK_SIZE": 10,
   "MEAT_TIME": 100,
   "VISUAL_RANGE": 250,
@@ -31,8 +31,8 @@
   "SIZE_COST": 125,
   "CHILDS_NUM": 1,
   "VEGE2ENG": 0.75,
-  "MEAT2ENG": 1.0,
-  "HIT2FIT": 0.5,
+  "MEAT2ENG": 1.5,
+  "HIT2FIT": 0.4,
   "MEAT2FIT": 0.15,
   "VEGE2FIT": 0.05,
   "DIFF": 0.3,
@@ -43,8 +43,10 @@
   "MUTATIONS": 0.5,
   "TIME": 1,
   "BORN2FIT": 125,
-  "RUN_COST": 6,
+  "RUN_COST": 3,
   "RUN_TIME": 5,
   "DIET_MOD": 0.035,
-  "SENSOR_RANGE": 350
+  "SENSOR_RANGE": 250,
+  "MIN_CARNIVORES": 4,
+  "MIN_HERBIVORES": 6
 }
