--- a/config.json
+++ b/config.json
@@ -11,8 +11,8 @@
   "CREATURE_MIN_NUM": 6,
   "EAT": 25,
   "CREATURE_INIT_NUM": 80,
-  "BASE_ENERGY": 0.008,
-  "MOVE_ENERGY": 0.000004,
+  "BASE_ENERGY": 0.005,
+  "MOVE_ENERGY": 0.0000028,
   "REP_TIME": 75,
   "REP_ENERGY": 0.3,
   "SPEED": 3,
