--- a/config.json
+++ b/config.json
@@ -25,7 +25,7 @@
   "SENSOR_MAX_ANGLE": 1.0471975511965976,
   "ROCK_NUM": 14,
   "RANK_SIZE": 10,
-  "MEAT_TIME": 50,
+  "MEAT_TIME": 75,
   "VISUAL_RANGE": 250,
   "SIZE2ENG": 200,
   "SIZE_COST": 180,
@@ -48,5 +48,6 @@
   "DIET_MOD": 0.04,
   "SENSOR_RANGE": 350,
   "MIN_CARNIVORES": 2,
-  "MIN_HERBIVORES": 4
+  "MIN_HERBIVORES": 4,
+  "NET": [33, 0, 0, 0, 0, 7]
 }
