--- a/config.json
+++ b/config.json
@@ -4,13 +4,13 @@
   "FONT_SIZE": 14,
   "PLANT_MAX_SIZE": 9,
   "PLANT_GROWTH": 5,
-  "PLANT_INIT_NUM": 100,
+  "PLANT_INIT_NUM": 20,
   "PLANT_LIFE": 500,
   "PLANT_MULTIPLY": 0.006,
   "CREATURE_MULTIPLY": 0.001,
   "CREATURE_MIN_NUM": 6,
   "EAT": 25,
-  "CREATURE_INIT_NUM": 80,
+  "CREATURE_INIT_NUM": 20,
   "BASE_ENERGY": 0.005,
   "MOVE_ENERGY": 0.0000028,
   "REP_TIME": 75,
@@ -22,7 +22,7 @@
   "CREATURE_MAX_SIZE": 7,
   "HIT": 200,
   "MEM_TIME": 0.2,
-  "SENSOR_MAX_ANGLE": 1.0471975511965976,
+  "SENSOR_MAX_ANGLE": 2.35,
   "ROCK_NUM": 14,
   "RANK_SIZE": 10,
   "MEAT_TIME": 75,
@@ -49,5 +49,5 @@
   "SENSOR_RANGE": 350,
   "MIN_CARNIVORES": 2,
   "MIN_HERBIVORES": 4,
-  "NET": [33, 0, 0, 0, 0, 7]
+  "NET": [24, 0, 0, 0, 0, 7]
 }
