--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "env\\Scripts\\python.exe",
+    "python.pythonPath": "C:\\Users\\gwozd\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
     "cSpell.ignoreWords": [
         "aacircle",
         "aaline",
