--- a/config.json
+++ b/config.json
@@ -1,19 +1,19 @@
 {
-  "WORLD": [1800, 950],
-  "SCREEN": [1800, 950],
+  "WORLD": [1400, 800],
+  "SCREEN": [1400, 800],
   "FONT_SIZE": 14,
   "PLANT_MAX_SIZE": 9,
   "PLANT_GROWTH": 5,
-  "PLANT_INIT_NUM": 20,
+  "PLANT_INIT_NUM": 40,
   "PLANT_LIFE": 500,
   "PLANT_MULTIPLY": 0.006,
   "CREATURE_MULTIPLY": 0.001,
   "CREATURE_MIN_NUM": 6,
   "EAT": 25,
-  "CREATURE_INIT_NUM": 20,
+  "CREATURE_INIT_NUM": 40,
   "BASE_ENERGY": 0.005,
   "MOVE_ENERGY": 0.0000028,
-  "REP_TIME": 75,
+  "REP_TIME": 120,
   "REP_ENERGY": 0.3,
   "SPEED": 3,
   "TURN": 0.5,
@@ -23,7 +23,7 @@
   "HIT": 200,
   "MEM_TIME": 0.2,
   "SENSOR_MAX_ANGLE": 2.35,
-  "ROCK_NUM": 14,
+  "ROCK_NUM": 4,
   "RANK_SIZE": 10,
   "MEAT_TIME": 75,
   "VISUAL_RANGE": 250,
@@ -39,15 +39,15 @@
   "AUTO_SAVE_TIME": 100,
   "ATK_ENG": 0.01,
   "EAT_ENG": 0.01,
-  "LINKS_RATE": 0.04,
+  "LINKS_RATE": 0.25,
   "MUTATIONS": 0.4,
   "TIME": 1,
   "BORN2FIT": 50,
   "RUN_COST": 6,
   "RUN_TIME": 7,
   "DIET_MOD": 0.04,
-  "SENSOR_RANGE": 350,
+  "SENSOR_RANGE": 300,
   "MIN_CARNIVORES": 2,
   "MIN_HERBIVORES": 4,
-  "NET": [24, 0, 0, 0, 0, 7]
+  "NET": [13, 0, 0, 0, 0, 0, 0, 0, 6]
 }
