--- a/config.json
+++ b/config.json
@@ -2,52 +2,52 @@
   "WORLD": [1800, 950],
   "SCREEN": [1800, 950],
   "FONT_SIZE": 14,
-  "PLANT_MAX_SIZE": 9,
+  "PLANT_MAX_SIZE": 10,
   "PLANT_GROWTH": 5,
-  "PLANT_INIT_NUM": 20,
+  "PLANT_INIT_NUM": 100,
   "PLANT_LIFE": 500,
-  "PLANT_MULTIPLY": 0.006,
+  "PLANT_MULTIPLY": 0.019,
   "CREATURE_MULTIPLY": 0.001,
-  "CREATURE_MIN_NUM": 6,
+  "CREATURE_MIN_NUM": 20,
   "EAT": 25,
-  "CREATURE_INIT_NUM": 20,
-  "BASE_ENERGY": 0.005,
-  "MOVE_ENERGY": 0.0000028,
-  "REP_TIME": 75,
+  "CREATURE_INIT_NUM": 80,
+  "BASE_ENERGY": 0.0048,
+  "MOVE_ENERGY": 0.0000023,
+  "REP_TIME": 120,
   "REP_ENERGY": 0.3,
   "SPEED": 3,
   "TURN": 0.5,
   "SENSOR_SPEED": 0.3,
   "CREATURE_MIN_SIZE": 2,
   "CREATURE_MAX_SIZE": 7,
-  "HIT": 200,
+  "HIT": 300,
   "MEM_TIME": 0.2,
   "SENSOR_MAX_ANGLE": 2.35,
-  "ROCK_NUM": 14,
+  "ROCK_NUM": 10,
   "RANK_SIZE": 10,
-  "MEAT_TIME": 75,
+  "MEAT_TIME": 100,
   "VISUAL_RANGE": 250,
   "SIZE2ENG": 200,
   "SIZE_COST": 180,
   "CHILDS_NUM": 1,
-  "VEGE2ENG": 1.5,
-  "MEAT2ENG": 0.4,
-  "HIT2FIT": 0.05,
-  "MEAT2FIT": 0.1,
-  "VEGE2FIT": 0.1,
+  "VEGE2ENG": 1.0,
+  "MEAT2ENG": 0.75,
+  "HIT2FIT": 0.03,
+  "MEAT2FIT": 0.01,
+  "VEGE2FIT": 0.01,
   "DIFF": 0.5,
-  "AUTO_SAVE_TIME": 100,
+  "AUTO_SAVE_TIME": 1000,
   "ATK_ENG": 0.01,
   "EAT_ENG": 0.01,
-  "LINKS_RATE": 0.04,
-  "MUTATIONS": 0.4,
+  "LINKS_RATE": 0.07,
+  "MUTATIONS": 0.25,
   "TIME": 1,
-  "BORN2FIT": 50,
+  "BORN2FIT": 250,
   "RUN_COST": 6,
-  "RUN_TIME": 7,
-  "DIET_MOD": 0.04,
-  "SENSOR_RANGE": 350,
-  "MIN_CARNIVORES": 2,
-  "MIN_HERBIVORES": 4,
-  "NET": [24, 0, 0, 0, 0, 7]
+  "RUN_TIME": 6,
+  "DIET_MOD": 0.035,
+  "SENSOR_RANGE": 250,
+  "MIN_CARNIVORES": 4,
+  "MIN_HERBIVORES": 5,
+  "NET": [24, 0, 0, 0, 0, 0, 0, 0, 0, 7]
 }
