--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
   "PLANT_LIFE": 500,
   "PLANT_MULTIPLY": 0.019,
   "CREATURE_MULTIPLY": 0.001,
-  "CREATURE_MIN_NUM": 20,
+  "CREATURE_MIN_NUM": 50,
   "EAT": 25,
   "CREATURE_INIT_NUM": 20,
   "BASE_ENERGY": 0.0048,
@@ -33,6 +33,7 @@
   "VEGE2ENG": 1.0,
   "MEAT2ENG": 0.75,
   "HIT2FIT": 0.03,
+  "KILL2FIT": 50,
   "MEAT2FIT": 0.01,
   "VEGE2FIT": 0.01,
   "DIFF": 0.5,
@@ -50,5 +51,6 @@
   "MIN_CARNIVORES": 4,
   "MIN_HERBIVORES": 5,
   "RANK_DECAY": 0.5,
+  "STAT_PERIOD": 2,
   "NET": [24, 0, 0, 0, 0, 0, 0, 0, 0, 7]
 }
