--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,6 @@
 {
-    "recommendations": []
+    "recommendations": [
+        "tushortz.pygame-snippets",
+        "dhanush.pygame-snips"
+    ]
 }
