--- a/config.json
+++ b/config.json
@@ -55,5 +55,7 @@
   "MAP_RES": 10,
   "WATER_COST": 0.05,
   "WATER_MOVE": 0.25,
+  "WATER_NEEDS": 0.005,
+  "WATER": 2,
   "NET": [22, 0, 0, 0, 6, 0, 0, 0, 0, 7]
 }
