--- a/saves/projects.json
+++ b/saves/projects.json
@@ -1,1 +1,1 @@
-{"projects": ["Terra0", "Terra00", "Hills", "NewLand", "NewLand3", "SecondLand"]}
+{"projects": ["Terra0", "Terra00", "Hills", "NewLand", "NewLand3", "SecondLand", "Rock"]}
