--- a/.gitignore
+++ b/.gitignore
@@ -387,6 +387,8 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+lib/__pycache__/
+lib/__pycache__
 lib/__pycache__/camera.cpython-39.pyc
 lib/__pycache__/species.cpython-39.pyc
 lib/__pycache__/statistics.cpython-39.pyc
