--- a/.gitignore
+++ b/.gitignore
@@ -397,3 +397,5 @@ lib/__pycache__/statistics.cpython-39.pyc
 lib/__pycache__/camera.cpython-39.pyc
 lib/__pycache__/species.cpython-39.pyc
 lib/__pycache__/statistics.cpython-39.pyc
+saves/Land04/300.0.json
+saves/Land04/saves.json
