--- a/.gitignore
+++ b/.gitignore
@@ -399,3 +399,134 @@ lib/__pycache__/species.cpython-39.pyc
 lib/__pycache__/statistics.cpython-39.pyc
 saves/Land04/300.0.json
 saves/Land04/saves.json
+saves/S02/3900.0.json
+saves/S02/4000.0.json
+saves/S02/4100.0.json
+saves/S02/4200.0.json
+saves/S02/4300.0.json
+saves/S02/4400.0.json
+saves/S02/4500.0.json
+saves/S02/4600.0.json
+saves/S02/4700.0.json
+saves/S02/4726.9.json
+saves/S02/4800.0.json
+saves/S02/4900.0.json
+saves/S02/5000.0.json
+saves/S02/5100.0.json
+saves/S02/5200.0.json
+saves/S02/5300.0.json
+saves/S02/5400.0.json
+saves/S02/5500.0.json
+saves/S02/5600.0.json
+saves/S02/5700.0.json
+saves/S02/5800.0.json
+saves/S02/5900.0.json
+saves/S02/6000.0.json
+saves/S02/6100.0.json
+saves/S02/6200.0.json
+saves/S02/6300.0.json
+saves/S02/6400.0.json
+saves/S02/6500.0.json
+saves/S02/6600.0.json
+saves/S02/6700.0.json
+saves/S02/6800.0.json
+saves/S02/6900.0.json
+saves/S02/7000.0.json
+saves/S02/7100.0.json
+saves/S02/7200.0.json
+saves/S02/7300.0.json
+saves/S02/7400.0.json
+saves/S02/7500.0.json
+saves/S02/7600.0.json
+saves/S02/7700.0.json
+saves/S02/7800.0.json
+saves/S02/7900.0.json
+saves/S02/8000.0.json
+saves/S02/8100.0.json
+saves/S02/8200.0.json
+saves/S02/8300.0.json
+saves/S02/8400.0.json
+saves/S02/8500.0.json
+saves/S02/8600.0.json
+saves/S02/8700.0.json
+saves/S02/8800.0.json
+saves/S02/8900.0.json
+saves/S02/9000.0.json
+saves/S02/9100.0.json
+saves/S02/9200.0.json
+saves/S02/9300.0.json
+saves/S02/9400.0.json
+saves/S02/9500.0.json
+saves/S02/9600.0.json
+saves/S02/9700.0.json
+saves/S02/9800.0.json
+saves/S02/9900.0.json
+saves/S02/10000.0.json
+saves/S02/10100.0.json
+saves/S02/10200.0.json
+saves/S02/10300.0.json
+saves/S02/10400.0.json
+saves/S02/10500.0.json
+saves/S02/10600.0.json
+saves/S02/10700.0.json
+saves/S02/10800.0.json
+saves/S02/10900.0.json
+saves/S02/11000.0.json
+saves/S02/11100.0.json
+saves/S02/11200.0.json
+saves/S02/11300.0.json
+saves/S02/11400.0.json
+saves/S02/11500.0.json
+saves/S02/11600.0.json
+saves/S02/11700.0.json
+saves/S02/11800.0.json
+saves/S02/11900.0.json
+saves/S02/12000.0.json
+saves/S02/12100.0.json
+saves/S02/12200.0.json
+saves/S02/12300.0.json
+saves/S02/12400.0.json
+saves/S02/12500.0.json
+saves/S02/12600.0.json
+saves/S02/12700.0.json
+saves/S02/12800.0.json
+saves/S02/12900.0.json
+saves/S02/13000.0.json
+saves/S02/13100.0.json
+saves/S02/13200.0.json
+saves/S02/13300.0.json
+saves/S02/13400.0.json
+saves/S02/13500.0.json
+saves/S02/13600.0.json
+saves/S02/13700.0.json
+saves/S02/13800.0.json
+saves/S02/13900.0.json
+saves/S02/14000.0.json
+saves/S02/14100.0.json
+saves/S02/14200.0.json
+saves/S02/14300.0.json
+saves/S02/14400.0.json
+saves/S02/14500.0.json
+saves/S02/14600.0.json
+saves/S02/14700.0.json
+saves/S02/14742.2.json
+saves/S02/14800.0.json
+saves/S02/14900.0.json
+saves/S02/14936.5.json
+saves/S02/saves.json
+saves/S02/saves.json
+saves/S02/saves.json
+saves/S03/0.0.json
+saves/S03/saves.json
+saves/S04/100.0.json
+saves/S04/200.0.json
+saves/S04/300.0.json
+saves/S04/400.0.json
+saves/S04/500.0.json
+saves/S04/600.0.json
+saves/S04/700.0.json
+saves/S04/752.2.json
+saves/S04/800.0.json
+saves/S04/saves.json
+main.html
+saves/S02/saves.json
