--- a/.gitignore
+++ b/.gitignore
@@ -530,3 +530,11 @@ saves/S04/800.0.json
 saves/S04/saves.json
 main.html
 saves/S02/saves.json
+saves/projects.json
+saves/A06/100.0.json
+saves/A06/saves.json
+saves/S04/900.0.json
+saves/S04/1000.0.json
+saves/S04/1100.0.json
+saves/S04/1116.4.json
+main.html
