--- a/.gitignore
+++ b/.gitignore
@@ -538,3 +538,48 @@ saves/S04/1000.0.json
 saves/S04/1100.0.json
 saves/S04/1116.4.json
 main.html
+saves/A06/200.0.json
+saves/A06/300.0.json
+saves/A06/400.0.json
+saves/A06/500.0.json
+saves/A06/600.0.json
+saves/A06/700.0.json
+saves/A06/800.0.json
+saves/A06/900.0.json
+saves/A06/1000.0.json
+saves/A06/1100.0.json
+saves/A06/1200.0.json
+saves/A06/1300.0.json
+saves/A06/1400.0.json
+saves/A06/1500.0.json
+saves/A06/1600.0.json
+saves/A06/1700.0.json
+saves/A06/1800.0.json
+saves/A06/1900.0.json
+saves/A06/2000.0.json
+saves/A06/2100.0.json
+saves/A06/2200.0.json
+saves/A06/2300.0.json
+saves/A06/2312.3.json
+saves/A06/2400.0.json
+saves/A06/2500.0.json
+saves/A06/2600.0.json
+saves/A06/2700.0.json
+saves/A06/2800.0.json
+saves/A06/2900.0.json
+saves/A06/3000.0.json
+saves/A06/3100.0.json
+saves/A06/3200.0.json
+saves/A06/3300.0.json
+saves/A06/3400.0.json
+saves/A06/3500.0.json
+saves/A06/3600.0.json
+saves/A06/3700.0.json
+saves/A06/3800.0.json
+saves/A06/3900.0.json
+saves/A06/4000.0.json
+saves/A06/4100.0.json
+saves/A06/4200.0.json
+saves/A06/4300.0.json
+saves/A06/4317.1.json
+main.html
