--- a/.gitignore
+++ b/.gitignore
@@ -835,3 +835,100 @@ saves/S02/3600.0.json
 saves/S02/3700.0.json
 saves/S02/3800.0.json
 saves/S02/saves.json
+saves/projects.json
+saves/Equal03/100.0.json
+saves/Equal03/200.0.json
+saves/Equal03/300.0.json
+saves/Equal03/400.0.json
+saves/Equal03/500.0.json
+saves/Equal03/600.0.json
+saves/Equal03/700.0.json
+saves/Equal03/800.0.json
+saves/Equal03/900.0.json
+saves/Equal03/1000.0.json
+saves/Equal03/1100.0.json
+saves/Equal03/1200.0.json
+saves/Equal03/1300.0.json
+saves/Equal03/1400.0.json
+saves/Equal03/1500.0.json
+saves/Equal03/1600.0.json
+saves/Equal03/1700.0.json
+saves/Equal03/1800.0.json
+saves/Equal03/1900.0.json
+saves/Equal03/2000.0.json
+saves/Equal03/2100.0.json
+saves/Equal03/2200.0.json
+saves/Equal03/2300.0.json
+saves/Equal03/2400.0.json
+saves/Equal03/2500.0.json
+saves/Equal03/2600.0.json
+saves/Equal03/2700.0.json
+saves/Equal03/2800.0.json
+saves/Equal03/2900.0.json
+saves/Equal03/3000.0.json
+saves/Equal03/3100.0.json
+saves/Equal03/3200.0.json
+saves/Equal03/3300.0.json
+saves/Equal03/3400.0.json
+saves/Equal03/3500.0.json
+saves/Equal03/3600.0.json
+saves/Equal03/3700.0.json
+saves/Equal03/3800.0.json
+saves/Equal03/3900.0.json
+saves/Equal03/4000.0.json
+saves/Equal03/4100.0.json
+saves/Equal03/4200.0.json
+saves/Equal03/4300.0.json
+saves/Equal03/4400.0.json
+saves/Equal03/4500.0.json
+saves/Equal03/saves.json
+saves/Univ01/100.0.json
+saves/Univ01/200.0.json
+saves/Univ01/300.0.json
+saves/Univ01/400.0.json
+saves/Univ01/500.0.json
+saves/Univ01/600.0.json
+saves/Univ01/700.0.json
+saves/Univ01/800.0.json
+saves/Univ01/900.0.json
+saves/Univ01/1000.0.json
+saves/Univ01/1100.0.json
+saves/Univ01/1200.0.json
+saves/Univ01/1300.0.json
+saves/Univ01/1400.0.json
+saves/Univ01/1500.0.json
+saves/Univ01/1600.0.json
+saves/Univ01/1700.0.json
+saves/Univ01/1800.0.json
+saves/Univ01/1900.0.json
+saves/Univ01/2000.0.json
+saves/Univ01/2100.0.json
+saves/Univ01/2200.0.json
+saves/Univ01/2300.0.json
+saves/Univ01/2400.0.json
+saves/Univ01/2500.0.json
+saves/Univ01/2600.0.json
+saves/Univ01/2700.0.json
+saves/Univ01/2800.0.json
+saves/Univ01/2900.0.json
+saves/Univ01/3000.0.json
+saves/Univ01/3100.0.json
+saves/Univ01/3200.0.json
+saves/Univ01/3300.0.json
+saves/Univ01/3400.0.json
+saves/Univ01/3500.0.json
+saves/Univ01/3600.0.json
+saves/Univ01/3700.0.json
+saves/Univ01/3800.0.json
+saves/Univ01/3900.0.json
+saves/Univ01/4000.0.json
+saves/Univ01/4100.0.json
+saves/Univ01/4200.0.json
+saves/Univ01/4300.0.json
+saves/Univ01/4400.0.json
+saves/Univ01/4500.0.json
+saves/Univ01/4600.0.json
+saves/Univ01/4700.0.json
+saves/Univ01/4800.0.json
+saves/Univ01/4824.1.json
+saves/Univ01/saves.json
