--- a/.gitignore
+++ b/.gitignore
@@ -932,3 +932,9 @@ saves/Univ01/4700.0.json
 saves/Univ01/4800.0.json
 saves/Univ01/4824.1.json
 saves/Univ01/saves.json
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/statistics.cpython-39.pyc
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/statistics.cpython-39.pyc
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/statistics.cpython-39.pyc
