--- a/.gitignore
+++ b/.gitignore
@@ -938,3 +938,6 @@ lib/__pycache__/camera.cpython-39.pyc
 lib/__pycache__/statistics.cpython-39.pyc
 lib/__pycache__/camera.cpython-39.pyc
 lib/__pycache__/statistics.cpython-39.pyc
+.vscode/.todo
+output/evo.exe
+output/evo.exe
