--- a/.gitignore
+++ b/.gitignore
@@ -835,3 +835,51 @@ saves/S02/3600.0.json
 saves/S02/3700.0.json
 saves/S02/3800.0.json
 saves/S02/saves.json
+saves/A/100.0.json
+saves/A/200.0.json
+saves/A/300.0.json
+saves/A/400.0.json
+saves/A/500.0.json
+saves/A/600.0.json
+saves/A/700.0.json
+saves/A/800.0.json
+saves/A/900.0.json
+saves/A/1000.0.json
+saves/A/1100.0.json
+saves/A/1200.0.json
+saves/A/1300.0.json
+saves/A/1400.0.json
+saves/A/1500.0.json
+saves/A/1600.0.json
+saves/A/1700.0.json
+saves/A/1700.6.json
+saves/A/saves.json
+saves/MEat/100.0.json
+saves/MEat/saves.json
+saves/Simulation01/100.0.json
+saves/Simulation01/200.0.json
+saves/Simulation01/300.0.json
+saves/Simulation01/400.0.json
+saves/Simulation01/500.0.json
+saves/Simulation01/600.0.json
+saves/Simulation01/700.0.json
+saves/Simulation01/800.0.json
+saves/Simulation01/900.0.json
+saves/Simulation01/1000.0.json
+saves/Simulation01/1100.0.json
+saves/Simulation01/1200.0.json
+saves/Simulation01/1300.0.json
+saves/Simulation01/1400.0.json
+saves/Simulation01/1500.0.json
+saves/Simulation01/1600.0.json
+saves/Simulation01/1700.0.json
+saves/Simulation01/1800.0.json
+saves/Simulation01/1900.0.json
+saves/Simulation01/2000.0.json
+saves/Simulation01/2100.0.json
+saves/Simulation01/2200.0.json
+saves/Simulation01/2300.0.json
+saves/Simulation01/2400.0.json
+saves/Simulation01/2488.5.json
+saves/Simulation01/saves.json
+main.html
