--- a/saves/projects.json
+++ b/saves/projects.json
@@ -1,1 +1,1 @@
-{"projects": ["P01", "Evo02", "MEat", "A", "Simulation01", "Simulation02"]}
+{"projects": ["Simulation01", "Simulation02", "Univ03"]}
