--- a/saves/projects.json
+++ b/saves/projects.json
@@ -1,5 +1,1 @@
-<<<<<<< HEAD
-{"projects": ["World02", "Proj"]}
-=======
-{"projects": ["Simulation01", "Simulation02", "Univ03"]}
->>>>>>> origin/plants
+{"projects": ["T1", "T2", "T3", "T4", "T5", "T6", "T7"]}
