--- a/.gitignore
+++ b/.gitignore
@@ -1290,3 +1290,210 @@ saves/World02/7857.6.json
 saves/World02/saves.json
 output/evo.exe
 output/res/images/planet64b.png
+output/evo.exe
+output/res/images/planet64b.png
+output/saves/T5/3047.0.json
+output/saves/T5/3147.0.json
+output/saves/T5/3247.0.json
+output/saves/T5/3347.0.json
+output/saves/T5/3447.0.json
+output/saves/T5/3547.0.json
+saves/projects.json
+saves/PLANT/100.0.json
+saves/PLANT/200.0.json
+saves/PLANT/300.0.json
+saves/PLANT/400.0.json
+saves/PLANT/500.0.json
+saves/PLANT/600.0.json
+saves/PLANT/700.0.json
+saves/PLANT/800.0.json
+saves/PLANT/900.0.json
+saves/PLANT/1000.0.json
+saves/PLANT/1100.0.json
+saves/PLANT/1200.0.json
+saves/PLANT/1300.0.json
+saves/PLANT/1400.0.json
+saves/PLANT/1500.0.json
+saves/PLANT/1600.0.json
+saves/PLANT/1700.0.json
+saves/PLANT/1800.0.json
+saves/PLANT/1900.0.json
+saves/PLANT/2000.0.json
+saves/PLANT/2100.0.json
+saves/PLANT/2200.0.json
+saves/PLANT/2300.0.json
+saves/PLANT/2400.0.json
+saves/PLANT/2500.0.json
+saves/PLANT/2600.0.json
+saves/PLANT/2700.0.json
+saves/PLANT/2800.0.json
+saves/PLANT/2900.0.json
+saves/PLANT/3000.0.json
+saves/PLANT/3100.0.json
+saves/PLANT/3200.0.json
+saves/PLANT/3300.0.json
+saves/PLANT/3400.0.json
+saves/PLANT/3500.0.json
+saves/PLANT/3600.0.json
+saves/PLANT/3700.0.json
+saves/PLANT/3800.0.json
+saves/PLANT/3900.0.json
+saves/PLANT/4000.0.json
+saves/PLANT/4100.0.json
+saves/PLANT/4200.0.json
+saves/PLANT/4300.0.json
+saves/PLANT/4400.0.json
+saves/PLANT/4500.0.json
+saves/PLANT/4600.0.json
+saves/PLANT/4700.0.json
+saves/PLANT/4800.0.json
+saves/PLANT/4900.0.json
+saves/PLANT/saves.json
+saves/T7/257.0.json
+saves/T7/357.0.json
+saves/T7/saves.json
+saves/T9/100.0.json
+saves/T9/200.0.json
+saves/T9/300.0.json
+saves/T9/400.0.json
+saves/T9/500.0.json
+saves/T9/600.0.json
+saves/T9/700.0.json
+saves/T9/800.0.json
+saves/T9/900.0.json
+saves/T9/1000.0.json
+saves/T9/1100.0.json
+saves/T9/1200.0.json
+saves/T9/1300.0.json
+saves/T9/1400.0.json
+saves/T9/1500.0.json
+saves/T9/1600.0.json
+saves/T9/1700.0.json
+saves/T9/1800.0.json
+saves/T9/1900.0.json
+saves/T9/2000.0.json
+saves/T9/2100.0.json
+saves/T9/2200.0.json
+saves/T9/2300.0.json
+saves/T9/2400.0.json
+saves/T9/2500.0.json
+saves/T9/2600.0.json
+saves/T9/2700.0.json
+saves/T9/2800.0.json
+saves/T9/2900.0.json
+saves/T9/3000.0.json
+saves/T9/3100.0.json
+saves/T9/3200.0.json
+saves/T9/3300.0.json
+saves/T9/3400.0.json
+saves/T9/3500.0.json
+saves/T9/3600.0.json
+saves/T9/3700.0.json
+saves/T9/3800.0.json
+saves/T9/3900.0.json
+saves/T9/4000.0.json
+saves/T9/4100.0.json
+saves/T9/4200.0.json
+saves/T9/4300.0.json
+saves/T9/4400.0.json
+saves/T9/4500.0.json
+saves/T9/4600.0.json
+saves/T9/4700.0.json
+saves/T9/4800.0.json
+saves/T9/4815.0.json
+saves/T9/4915.0.json
+saves/T9/5015.0.json
+saves/T9/5115.0.json
+saves/T9/5215.0.json
+saves/T9/5315.0.json
+saves/T9/5415.0.json
+saves/T9/5515.0.json
+saves/T9/5615.0.json
+saves/T9/5715.0.json
+saves/T9/5815.0.json
+saves/T9/5915.0.json
+saves/T9/6015.0.json
+saves/T9/6115.0.json
+saves/T9/6215.0.json
+saves/T9/6315.0.json
+saves/T9/6415.0.json
+saves/T9/6515.0.json
+saves/T9/6615.0.json
+saves/T9/6715.0.json
+saves/T9/6815.0.json
+saves/T9/6915.0.json
+saves/T9/7015.0.json
+saves/T9/7115.0.json
+saves/T9/7215.0.json
+saves/T9/7315.0.json
+saves/T9/7415.0.json
+saves/T9/7515.0.json
+saves/T9/7615.0.json
+saves/T9/7715.0.json
+saves/T9/7815.0.json
+saves/T9/7915.0.json
+saves/T9/8015.0.json
+saves/T9/8115.0.json
+saves/T9/8163.8.json
+saves/T9/8215.0.json
+saves/T9/8315.0.json
+saves/T9/8415.0.json
+saves/T9/8515.0.json
+saves/T9/8615.0.json
+saves/T9/8715.0.json
+saves/T9/8815.0.json
+saves/T9/8881.5.json
+saves/T9/8915.0.json
+saves/T9/8981.0.json
+saves/T9/saves.json
+saves/World02/500.0.json
+saves/World02/1000.0.json
+saves/World02/2000.0.json
+saves/World02/3000.0.json
+saves/World02/4000.0.json
+saves/World02/5000.0.json
+saves/World02/6000.0.json
+saves/World02/6500.0.json
+saves/World02/7000.0.json
+saves/World02/7200.0.json
+saves/World02/7300.0.json
+saves/World02/7400.0.json
+saves/World02/7476.3.json
+saves/World02/7485.3.json
+saves/World02/7637.2.json
+saves/World02/7770.0.json
+saves/World02/7857.6.json
+saves/World02/saves.json
+saves/projects.json
+saves/T7/saves.json
+saves/World02/500.0.json
+saves/World02/1000.0.json
+saves/World02/2000.0.json
+saves/World02/3000.0.json
+saves/World02/4000.0.json
+saves/World02/5000.0.json
+saves/World02/6000.0.json
+saves/World02/6500.0.json
+saves/World02/7000.0.json
+saves/World02/7200.0.json
+saves/World02/7300.0.json
+saves/World02/7400.0.json
+saves/World02/7476.3.json
+saves/World02/7485.3.json
+saves/World02/7637.2.json
+saves/World02/7770.0.json
+saves/World02/7857.6.json
+saves/World02/saves.json
+output/evo.exe
+output/res/images/planet64b.png
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/statistics.cpython-39.pyc
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/statistics.cpython-39.pyc
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/statistics.cpython-39.pyc
+output/evo.exe
+output/res/images/planet64b.png
+output/res/images/planet64b.png
+output/res/images/planet64b.png
+output/evo.exe
