--- a/config.json
+++ b/config.json
@@ -4,15 +4,16 @@
   "FONT_SIZE": 14,
   "PLANT_MAX_SIZE": 11,
   "PLANT_GROWTH": 6,
-  "PLANT_INIT_NUM": 60,
-  "PLANT_LIFE": 600,
-  "PLANT_MULTIPLY": 1.0,
+  "PLANT_INIT_NUM": 50,
+  "PLANT_LIFE": 500,
+  "PLANT_MULTIPLY": 0.75,
+  "PLANT_RANGE": 250,
   "CREATURE_MULTIPLY": 0.0013,
-  "CREATURE_MIN_NUM": 10,
+  "CREATURE_MIN_NUM": 20,
   "EAT": 20,
   "CREATURE_INIT_NUM": 100,
-  "BASE_ENERGY": 0.0052,
-  "MOVE_ENERGY": 0.0000023,
+  "BASE_ENERGY": 0.009,
+  "MOVE_ENERGY": 0.0055,
   "REP_TIME": 120,
   "REP_ENERGY": 0.3,
   "SPEED": 4,
@@ -25,20 +26,21 @@
   "SENSOR_MAX_ANGLE": 1.2,
   "ROCK_NUM": 0,
   "RANK_SIZE": 30,
-  "MEAT_TIME": 85,
+  "MEAT_TIME": 120,
   "SIZE2ENG": 200,
-  "SIZE_COST": 180,
+  "SIZE_COST": 75,
+  "POWER_COST": 0.1,
   "CHILDS_NUM": 1,
   "VEGE2ENG": 1.5,
-  "MEAT2ENG": 1.2,
+  "MEAT2ENG": 1.8,
   "HIT2FIT": 0.02,
-  "KILL2FIT": 50,
+  "KILL2FIT": 150,
   "MEAT2FIT": 0.04,
   "VEGE2FIT": 0.01,
   "DIFF": 0.5,
   "AUTO_SAVE_TIME": 100,
-  "ATK_ENG": 0.01,
-  "EAT_ENG": 0.01,
+  "ATK_ENG": 0.0001,
+  "EAT_ENG": 0.0001,
   "LINKS_RATE": 0.12,
   "MUTATIONS": 0.5,
   "TIME": 1,
@@ -51,7 +53,7 @@
   "MIN_HERBIVORES": 4,
   "RANK_DECAY": 0.4,
   "STAT_PERIOD": 10,
-  "WATER_COST": 0.01,
+  "WATER_COST": 0.1,
   "WATER_MOVE": 0.1,
   "NET": [19, 0, 0, 0, 0, 0, 0, 0, 7]
 }
