--- a/.gitignore
+++ b/.gitignore
@@ -1497,3 +1497,24 @@ output/res/images/planet64b.png
 output/res/images/planet64b.png
 output/res/images/planet64b.png
 output/evo.exe
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/statistics.cpython-39.pyc
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/statistics.cpython-39.pyc
+saves/Univ/100.0.json
+saves/Univ/saves.json
+saves/Univ02/100.0.json
+saves/Univ02/200.0.json
+saves/Univ02/300.0.json
+saves/Univ02/366.9.json
+saves/Univ02/saves.json
+saves/Eye05/100.0.json
+saves/Eye05/200.0.json
+saves/Eye05/300.0.json
+saves/Eye05/400.0.json
+saves/Eye05/500.0.json
+saves/Eye05/600.2.json
+saves/Eye05/700.3.json
+saves/Eye05/saves.json
+saves/Eye2/100.0.json
+saves/Eye2/saves.json
