--- a/config.json
+++ b/config.json
@@ -2,11 +2,12 @@
   "WORLD": [1800, 900],
   "SCREEN": [1800, 900],
   "FONT_SIZE": 14,
-  "PLANT_MAX_SIZE": 10,
-  "PLANT_GROWTH": 4,
+  "PLANT_MAX_SIZE": 11,
+  "PLANT_GROWTH": 6,
   "PLANT_INIT_NUM": 60,
-  "PLANT_LIFE": 500,
-  "PLANT_MULTIPLY": 0.8,
+  "PLANT_MIN_NUM": 5,
+  "PLANT_LIFE": 600,
+  "PLANT_MULTIPLY": 4.0,
   "PLANT_RANGE": 250,
   "CREATURE_MULTIPLY": 0.0013,
   "CREATURE_MIN_NUM": 20,
@@ -32,9 +33,9 @@
   "POWER_COST": 0.0,
   "CHILDS_NUM": 1,
   "VEGE2ENG": 1.5,
-  "MEAT2ENG": 1.3,
+  "MEAT2ENG": 1.8,
   "HIT2FIT": 0.02,
-  "KILL2FIT": 50,
+  "KILL2FIT": 150,
   "MEAT2FIT": 0.04,
   "VEGE2FIT": 0.01,
   "DIFF": 0.5,
@@ -42,7 +43,7 @@
   "ATK_ENG": 0.01,
   "EAT_ENG": 0.01,
   "LINKS_RATE": 0.12,
-  "MUTATIONS": 0.3,
+  "MUTATIONS": 0.7,
   "TIME": 1,
   "BORN2FIT": 250,
   "RUN_COST": 6,
