--- a/saves/projects.json
+++ b/saves/projects.json
@@ -1,1 +1,1 @@
-{"projects": ["PLANT", "Univ01", "Univ02", "Start", "World", "T", "New13", "New14", "New15", "New16", "New17"]}
+{"projects": ["New17", "New18", "New20", "New21", "New22", "New23"]}
