--- a/config.json
+++ b/config.json
@@ -1,60 +1,71 @@
 {
-  "WORLD": [1800, 900],
+  "WORLD": [2400, 1350],
   "SCREEN": [1800, 900],
   "FONT_SIZE": 14,
-  "PLANT_MAX_SIZE": 11,
-  "PLANT_GROWTH": 7,
+
+  
+  "PLANT_MIN_NUM": 15,
   "PLANT_INIT_NUM": 60,
-  "PLANT_MIN_NUM": 5,
+  "PLANT_MULTIPLY": 0.8,
+  "PLANT_MAX_SIZE": 11,
+  "PLANT_GROWTH": 8,
   "PLANT_LIFE": 500,
-  "PLANT_MULTIPLY": 1.0,
   "PLANT_RANGE": 250,
+
+  "CREATURE_MIN_NUM": 5,
+  "CREATURE_INIT_NUM": 200,
   "CREATURE_MULTIPLY": 0.0013,
-  "CREATURE_MIN_NUM": 18,
-  "EAT": 15,
-  "CREATURE_INIT_NUM": 100,
-  "BASE_ENERGY": 0.0052,
-  "MOVE_ENERGY": 0.0000023,
-  "REP_TIME": 120,
-  "REP_ENERGY": 0.3,
+  "CREATURE_MIN_SIZE": 3,
+  "CREATURE_MAX_SIZE": 10,
+
+  "EAT": 20,
+  "HIT": 300,
   "SPEED": 4,
   "TURN": 1.2,
   "SENSOR_SPEED": 0.3,
-  "CREATURE_MIN_SIZE": 3,
-  "CREATURE_MAX_SIZE": 10,
-  "HIT": 300,
-  "MEM_TIME": 0.1,
   "SENSOR_MAX_ANGLE": 1,
-  "ROCK_NUM": 0,
-  "RANK_SIZE": 50,
-  "MEAT_TIME": 180,
+  "SENSOR_RANGE": 400,
+  "POWER_COST": 0.0004,
+  "MUTATIONS": 1.0,
+  "LINKS_RATE": 0.1,
+  
+  "BASE_ENERGY": 0.0025,
+  "MOVE_ENERGY": 0.000001,
   "SIZE2ENG": 200,
-  "SIZE_COST": 180,
-  "POWER_COST": 0.0,
+  "SIZE_COST": 250,
+  "ATK_ENG": 0.4,
+  "EAT_ENG": 0.1,
+  "VEGE2ENG": 5.0,
+  "MEAT2ENG": 2.0,
+  "RUN_COST": 6,
+  "RUN_TIME": 6,
+
+  "REP_TIME": 120,
+  "REP_ENERGY": 0.3,
   "CHILDS_NUM": 1,
-  "VEGE2ENG": 0.9,
-  "MEAT2ENG": 1.5,
+  "MEM_TIME": 0.1,
+  "ROCK_NUM": 0,
+  "MEAT_TIME": 240,
+  "DIET_MOD": 0.1,
+  
+  "RANK_SIZE": 35,
+  "AUTO_SAVE_TIME": 500,
+  "TIME": 1,
+  "DIFF": 0.4,
+  "H2C": 3,
+
   "HIT2FIT": 0.03,
   "KILL2FIT": 300,
   "MEAT2FIT": 0.06,
   "VEGE2FIT": 0.01,
-  "DIFF": 0.4,
-  "AUTO_SAVE_TIME": 100,
-  "ATK_ENG": 0.01,
-  "EAT_ENG": 0.01,
-  "LINKS_RATE": 0.12,
-  "MUTATIONS": 1.0,
-  "TIME": 1,
   "BORN2FIT": 250,
-  "RUN_COST": 6,
-  "RUN_TIME": 6,
-  "DIET_MOD": 0.035,
-  "SENSOR_RANGE": 400,
+
   "MIN_CARNIVORES": 2,
   "MIN_HERBIVORES": 4,
   "RANK_DECAY": 0.4,
-  "STAT_PERIOD": 50,
+  "STAT_PERIOD": 10,
+
   "WATER_COST": 0.01,
   "WATER_MOVE": 0.1,
-  "NET": [19, 0, 2, 0, 2, 0, 2, 0, 8]
+  "NET": [19, 0, 0, 0, 0, 0, 0, 0, 8]
 }
