--- a/saves/projects.json
+++ b/saves/projects.json
@@ -1,1 +1,1 @@
-{"projects": ["New17", "New18", "New20", "New21", "New22", "New23", "H2C", "Planet01", "Univ01"]}
+{"projects": ["New17", "New18", "New20", "New21", "New22", "New23", "H2C", "Planet01", "Univ01", "NewEye", "NewEye02", "No3", "No4"]}
