--- a/.gitignore
+++ b/.gitignore
@@ -1520,3 +1520,40 @@ saves/Eye2/100.0.json
 saves/Eye2/saves.json
 main.html
 main.html
+saves/No14/5500.0.json
+saves/No14/6000.0.json
+saves/No14/6500.0.json
+saves/No14/7000.0.json
+saves/No14/7500.0.json
+saves/No14/8000.0.json
+saves/No14/8500.0.json
+saves/No14/9000.0.json
+saves/No14/9500.0.json
+saves/No14/10000.0.json
+saves/No14/10500.0.json
+saves/No14/11000.0.json
+saves/No14/11500.0.json
+saves/No14/12000.0.json
+saves/No14/12500.0.json
+saves/No14/13000.0.json
+saves/No14/13500.0.json
+saves/No14/14000.0.json
+saves/No14/saves.json
+saves/No14/5500.0.json
+saves/No14/6000.0.json
+saves/No14/6500.0.json
+saves/No14/7000.0.json
+saves/No14/7500.0.json
+saves/No14/8000.0.json
+saves/No14/8500.0.json
+saves/No14/9000.0.json
+saves/No14/9500.0.json
+saves/No14/10000.0.json
+saves/No14/10500.0.json
+saves/No14/11000.0.json
+saves/No14/11500.0.json
+saves/No14/12000.0.json
+saves/No14/12500.0.json
+saves/No14/13000.0.json
+saves/No14/13500.0.json
+saves/No14/14000.0.json
