--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "python.pythonPath": "D:\\PYTHON\\Nature\\env\\Scripts\\python.exe",
     "cSpell.ignoreWords": [
+        "ATACK",
+        "ENERG",
+        "INJUR",
         "aacircle",
         "aaline",
         "cpos",
@@ -12,6 +15,7 @@
         "hwsurface",
         "meat",
         "obstacle",
+        "rpos",
         "subtitl",
         "titl",
         "vege",
