--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,10 +11,12 @@
         "doublebuf",
         "engy",
         "fira",
+        "fizjo",
         "font",
         "hwsurface",
         "meat",
         "obstacle",
+        "physionomy",
         "rpos",
         "subtitl",
         "titl",
